--- a/voice-assistant/m5stack-cores3.yaml
+++ b/voice-assistant/m5stack-cores3.yaml
@@ -194,12 +194,12 @@ image:
     resize: 320x240
     type: RGB24
     use_transparency: true
-  - file: https://github.com/esphome/firmware/raw/main/voice-assistant/error_box_illustrations/error-no-wifi.png
+  - file: file: https://github.com/nil1001/M5CoreS3-Esphome/blob/main/images/error-no-wifi.png
     id: error_no_wifi
     resize: 320x240
     type: RGB24
     use_transparency: true
-  - file: https://github.com/esphome/firmware/raw/main/voice-assistant/error_box_illustrations/error-no-ha.png
+  - file: https://github.com/nil1001/M5CoreS3-Esphome/blob/main/images/error-no-ha.png
     id: error_no_ha
     resize: 320x240
     type: RGB24
